# fatigue_detection

./: CMakeLists.txt  README.md
facedetection/lib/: libfacedetection.so.v0.0.3
facedetection/lib/cmake/facedetection/: facedetectionConfig-release.cmake  facedetectionConfig.cmake  facedetectionConfigVersion.cmake
include/: fatigue_detect.h
src/: fatigue_detect.cpp  main.cpp
